Added get_data_point() resource to Flask server
